# danidjango

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
dani/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
danimax/: admin.py  apps.py  models.py  tests.py  views.py
danimax/migrations/: 0001_initial.py  0002_alter_product_options.py
templates/danimax/: detail.html  index.html
