[tool.poetry]
name = "djangoproject2"
version = "0.1.0"
description = ""
authors = ["pyoneerC <maxcomperatutti@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
django-extensions = ">=4.1,<5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
